Issue #89: Removed validate class in name field

--- a/src/pages/templates/partials/_RuleProperties.hbs
+++ b/src/pages/templates/partials/_RuleProperties.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="input-field name-container">
-    <input type="text" class="validate rule-name-input" value="{{name}}">
+    <input type="text" class="rule-name-input" value="{{name}}">
     <label class="active">Rule Name</label>
   </div>
   <div class="rule-status-container">
