--- a/src/pages/templates/RuleIndex.hbs
+++ b/src/pages/templates/RuleIndex.hbs
@@ -8,7 +8,7 @@
         <input type="checkbox" class="filled-in select-all-rules-checkbox" id="select-all-rules-checkbox" title="Select All"/>
         <label for="select-all-rules-checkbox"></label>
       </th>
-      <th></th>
+      <th> <span class="rules-number badge">{{ rules.length }}</span> </th>
       <th>Name & Description</th>
       <th class="status-cell">Status</th>
       <th>Created on</th>
